--- a/BlueTeamApp/BlueTeamApp/BlueTeamApp/Views/Shared/_Layout.cshtml
+++ b/BlueTeamApp/BlueTeamApp/BlueTeamApp/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here.", "Index", "Home")</p>
+                    <p class="site-title">@Html.ActionLink("Planning Permission", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
@@ -38,7 +38,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
+                    <p>&copy; @DateTime.Now.Year - BlueTeam ASP.NET MVC Application</p>
                 </div>
                 <div class="float-right">
                     <ul id="social">
